finally normal game - fixed